Fix annotation processing with matchers (2)